# ms-project-agent

./: .env.example  .gitignore  CLAUDE.md  TODO.md  pyproject.toml  spec.md
.claude/: settings.json
.claude/agent-memory/pm-planner-agent/: MEMORY.md  project_test_agent.md  user_role.md
.claude/agents/: executor-agent.md  pm-planner-agent.md
.claude/skills/ms-project-onboarding/: SKILL.md
.claude/skills/ms-project-orchestrator/: SKILL.md
docs/: azure-setup.md  lessons-learned.md
docs/agents/: executor-agent.md  orchestrator-agent.md  project-manager-agent.md
docs/superpowers/plans/: 2026-04-08-ms-planner-agent.md
docs/superpowers/specs/: 2026-04-08-ms-planner-agent-design.md
projects/: index.yaml
projects/data-migration/: config.yaml
projects/q3-infrastructure-upgrade/: config.yaml
projects/q3-infrastructure-upgrade/docs/: assumptions-constraints.md  budget.md  change-requests.md  decision-log.md  dependencies.md  issues-log.md  lessons-learned.md  meeting-notes.md  milestones.md  project-definition.md  raci.md  requirements.md  risk-register.md  stakeholders.md  wbs.md
projects/test-agent/: config.yaml  execution-log.md  instructions.md
projects/website-redesign/: config.yaml
src/ms_planner/: __init__.py  auth.py  client.py  config.py  exceptions.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_models.py
tests/test_cli/: test_buckets.py  test_plans.py  test_snapshot.py  test_tasks.py
tests/test_services/: test_buckets.py  test_plans.py  test_snapshot.py  test_tasks.py  test_users.py
(+80 files in other folders)
